--- a/src/templates/Base.astro
+++ b/src/templates/Base.astro
@@ -24,7 +24,10 @@ const {
     <meta name='author' content={AppConfig.author} />
 
     <link rel='alternate' type='application/rss+xml' href='/rss.xml' />
-    <link rel='icon' type='image/x-icon' href='/favicon.ico' />
+    <!-- <link rel='icon' type='image/x-icon' href='/favicon.ico' /> -->
+
+    <!-- <link rel="shortcut icon" href="favicon.ico" > -->
+    <link rel="icon" href="/animated_favicon.gif" type="image/gif" >
   </head>
   <body class='bg-slate-900 text-gray-100'>
     <Navbar />
